[gd_scene load_steps=42 format=4 uid="uid://dryinuip71yvm"]

[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="1_c5656"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="2_wm0bx"]
[ext_resource type="SpriteFrames" uid="uid://jnmt5u3uyqdf" path="res://scenes/quests/story_quests/gazzart/player_components/gazzart_player.tres" id="3_7xmax"]
[ext_resource type="Script" uid="uid://c68oh8dtr21ti" path="res://scenes/game_logic/sequence_puzzle.gd" id="4_7qsgx"]
[ext_resource type="PackedScene" uid="uid://b8sok264erfoc" path="res://scenes/game_elements/props/sequence_puzzle_object/sequence_puzzle_object.tscn" id="5_4v8ro"]
[ext_resource type="SpriteFrames" uid="uid://dk4pfgsqu5r7j" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/gazzart_object.tres" id="6_cmgae"]
[ext_resource type="AudioStream" uid="uid://cg57q82pb243w" path="res://assets/third_party/nepalese_hand_bells/handBells-c4.ogg" id="7_2uj2h"]
[ext_resource type="AudioStream" uid="uid://b83x8h0ob5mpq" path="res://assets/third_party/nepalese_hand_bells/handBells-d4.ogg" id="8_vtitg"]
[ext_resource type="AudioStream" uid="uid://cmtiwg2cylmts" path="res://assets/third_party/nepalese_hand_bells/handBells-e4.ogg" id="9_h0ieo"]
[ext_resource type="AudioStream" uid="uid://8k1hyi4gjae4" path="res://assets/third_party/nepalese_hand_bells/handBells-f4.ogg" id="10_q7u8c"]
[ext_resource type="AudioStream" uid="uid://6oahn2ucxxjv" path="res://assets/third_party/nepalese_hand_bells/handBells-g4.ogg" id="11_2i5va"]
[ext_resource type="AudioStream" uid="uid://bdboi4ndapqec" path="res://assets/third_party/nepalese_hand_bells/handBells-a4.ogg" id="12_qytao"]
[ext_resource type="PackedScene" uid="uid://be4o3ythda4cu" path="res://scenes/game_elements/props/sequence_puzzle_hint_sign/sequence_puzzle_hint_sign.tscn" id="13_3ssai"]
[ext_resource type="SpriteFrames" uid="uid://eexl30vv4uls" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/gazzart_sign.tres" id="14_uhivf"]
[ext_resource type="SpriteFrames" uid="uid://cukei7tv4dpej" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/gazzart_sign_2.tres" id="15_1vd5v"]
[ext_resource type="Script" uid="uid://ccc78coj2b1li" path="res://scenes/game_logic/sequence_puzzle_step.gd" id="16_in2xq"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="17_3rrd2"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="18_7cqpc"]
[ext_resource type="Resource" uid="uid://dtubaac2ws53c" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/gazzart_sequence_puzzle.dialogue" id="19_6gaxm"]
[ext_resource type="PackedScene" uid="uid://covsdqqsd6rsy" path="res://scenes/game_elements/props/sign/sign.tscn" id="20_vttva"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="21_ca12e"]
[ext_resource type="Texture2D" uid="uid://cf34tb5m4t6a1" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/box1.png" id="21_gg1sl"]
[ext_resource type="Script" uid="uid://c83qdc8rpl4se" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/box_1.gd" id="21_x6l02"]
[ext_resource type="Script" uid="uid://x1mxt6bmei2o" path="res://scenes/ui_elements/cinematic/cinematic.gd" id="22_tgado"]
[ext_resource type="Script" uid="uid://bltpep3g48huc" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/box_2.gd" id="23_k8ms1"]
[ext_resource type="Texture2D" uid="uid://c2m3jeidfq6ai" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/box2.png" id="24_cf23d"]
[ext_resource type="Texture2D" uid="uid://bdg1kleu2swm0" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/puentes/bridge2.png" id="25_1devu"]
[ext_resource type="Script" uid="uid://du8wfijr35r35" path="res://scenes/game_elements/props/interact_area/components/interact_area.gd" id="26_interact"]
[ext_resource type="Texture2D" uid="uid://cubtn1v2dpyue" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/number1_sprite.png" id="26_qbn36"]
[ext_resource type="Texture2D" uid="uid://ccqvkh3nuycr7" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/puentes/bridge7.png" id="26_vto3y"]
[ext_resource type="Script" uid="uid://8xo5f21u6msr" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/number_1.gd" id="27_number1"]
[ext_resource type="Script" uid="uid://c2lbftbqre78x" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/number_2.gd" id="28_d1r8i"]
[ext_resource type="Texture2D" uid="uid://1judetxxx5cd" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/number2_sprite.png" id="29_8k25n"]
[ext_resource type="Script" uid="uid://b7gql5ketshdk" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/number_3.gd" id="29_p0ape"]
[ext_resource type="Script" uid="uid://mgl5d6o11dmm" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/number_4.gd" id="30_kmrtp"]
[ext_resource type="Texture2D" uid="uid://cgq411tidsdjm" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/number3_sprite.png" id="31_1devu"]
[ext_resource type="Texture2D" uid="uid://cybuabtqleui7" path="res://scenes/quests/story_quests/gazzart/puzzle_testing/components/number4_sprite.png" id="33_vto3y"]

[sub_resource type="Resource" id="Resource_n8tm3"]
script = ExtResource("18_7cqpc")
type = 2
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6l02"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_0krk3"]
radius = 21.023796

[sub_resource type="CircleShape2D" id="CircleShape2D_interact"]
radius = 25.0

[node name="SequencePuzzleTemplate" type="Node2D"]

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAAMAAcAAQABAAEAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAALAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAKAAMAAQABAAEAAAAKAAIAAQABAAEAAAAJAAcAAQABAAEAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAIAAcAAQABAAEAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAHAAcAAQABAAEAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAGAAcAAQABAAEAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAFAAEAAQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAIAAQABAAEAAAAEAAEAAQABAAEAAAADAAIAAQABAAEAAAADAAEAAQABAAEAAAACAAMAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQABAAEAAAABAAEAAQABAAEAAAACAAQAAQABAAEAAAABAAQAAQABAAEAAAAAAAQAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAFAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAAKAAAAAQABAAEAAAANAAAAAQABAAEAAAAEAAAAAQABAAEAAAADAAAAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAKAAgAAQABAAEAAAAMAAgAAQABAAEAAAALAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAOAAcAAQABAAEAAAAOAAYAAQABAAEAAAAOAAUAAQABAAEAAAAOAAQAAQABAAEAAAAOAAMAAQABAAEAAAAOAAIAAQABAAEAAAAOAAEAAQABAAEAAAAOAAAAAQABAAEAAAAAAAUAAQABAAEAAAABAAUAAQABAAEAAAACAAUAAQABAAEAAAADAAUAAQABAAEAAAAEAAUAAQABAAEAAAADAAYAAQABAAEAAAACAAYAAQABAAEAAAABAAYAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAABAAcAAQABAAEAAAACAAcAAQABAAEAAAADAAcAAQABAAEAAAAGAAEAAQABAAEAAAAHAAEAAQABAAEAAAAIAAEAAQABAAEAAAAJAAEAAQABAAEAAAAKAAEAAQABAAEAAAAPAAkAAQACAAIAAAAPAAgAAQACAAEAAAAPAAcAAQACAAEAAAAPAAYAAQACAAEAAAAPAAUAAQACAAEAAAAPAAQAAQACAAEAAAAPAAMAAQACAAEAAAAPAAIAAQACAAEAAAAPAAEAAQACAAEAAAAPAAAAAQACAAEAAAAPAP//AQACAAAAAAAOAAkAAQABAAIAAAAOAP//AQABAAAAAAANAAkAAQABAAIAAAANAP//AQABAAAAAAAMAAkAAQABAAIAAAAMAP//AQABAAAAAAALAAkAAQABAAIAAAALAP//AQABAAAAAAAKAAkAAQABAAIAAAAKAP//AQABAAAAAAAJAP//AQABAAAAAAAIAAkAAQABAAIAAAAIAP//AQABAAAAAAAHAAkAAQABAAIAAAAHAP//AQABAAAAAAAGAAkAAQABAAIAAAAGAP//AQABAAAAAAAFAAkAAQABAAIAAAAFAP//AQABAAAAAAAEAAkAAQABAAIAAAAEAP//AQABAAAAAAADAAkAAQABAAIAAAADAP//AQABAAAAAAACAAkAAQABAAIAAAACAP//AQABAAAAAAABAAkAAQABAAIAAAABAP//AQABAAAAAAAAAAkAAQABAAIAAAAAAP//AQABAAAAAAD//wkAAQAAAAIAAAD//wgAAQAAAAEAAAD//wcAAQAAAAEAAAD//wYAAQAAAAEAAAD//wUAAQAAAAEAAAD//wQAAQAAAAEAAAD//wMAAQAAAAEAAAD//wIAAQAAAAEAAAD//wEAAQAAAAEAAAD//wAAAQAAAAEAAAD/////AQAAAAAAAAAJAAgAAQABAAEAAAAJAAkAAQABAAIAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAFAAUAAQABAAEAAAADAAMAAQABAAEAAAAEAAMAAQABAAEAAAAEAAQAAQABAAEAAAADAAQAAQABAAEAAAA=")
tile_set = ExtResource("1_c5656")

[node name="Sand" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD//wcAAQAFAAMAAAAAAAcAAQAGAAMAAAABAAcAAQAGAAMAAAACAAcAAQAGAAMAAAADAAcAAQAHAAIAAAADAAYAAQAIAAEAAAAEAAUAAQAGAAMAAAAFAAUAAQAGAAMAAAAGAAUAAQAGAAMAAAAHAAUAAQAGAAMAAAAIAAUAAQAGAAMAAAAJAAUAAQAGAAMAAAAKAAUAAQAGAAMAAAALAAUAAQAHAAIAAAALAAQAAQAFAAAAAAAMAAQAAQAGAAMAAAANAAQAAQAGAAMAAAAOAAQAAQAGAAMAAAAPAAQAAQAHAAMAAAADAAUAAQAFAAAAAAA=")
tile_set = ExtResource("1_c5656")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("2_wm0bx")]
position = Vector2(521, 430)
sprite_frames = ExtResource("3_7xmax")

[node name="SequencePuzzle" type="Node2D" parent="OnTheGround"]
y_sort_enabled = true
position = Vector2(-1, 0)
script = ExtResource("4_7qsgx")
metadata/_custom_type_script = "uid://c68oh8dtr21ti"

[node name="Objects" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true
position = Vector2(356, 453)

[node name="Blue" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0, 0.4, 0.6, 1)
position = Vector2(11, 58)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("7_2uj2h")

[node name="Pink" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0.89, 0.2937, 0.804817, 1)
position = Vector2(164, 56)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("8_vtitg")

[node name="Yellow" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0.89, 0.804817, 0.2937, 1)
position = Vector2(86, 61)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("9_h0ieo")

[node name="Green" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0.188235, 0.717647, 0, 1)
position = Vector2(312, 54)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("10_q7u8c")

[node name="Purple" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0.464066, 0.2937, 0.89, 1)
position = Vector2(244, 59)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("11_2i5va")

[node name="Red" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_4v8ro")]
modulate = Color(0.89, 0.2937, 0.2937, 1)
position = Vector2(379, 52)
sprite_frames = ExtResource("6_cmgae")
audio_stream = ExtResource("12_qytao")

[node name="Signs" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true

[node name="HintSign1" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("13_3ssai")]
position = Vector2(495, 136)
sprite_frames = ExtResource("14_uhivf")

[node name="HintSign2" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("13_3ssai")]
position = Vector2(593, 137)
sprite_frames = ExtResource("15_1vd5v")

[node name="Steps" type="Node2D" parent="OnTheGround/SequencePuzzle"]

[node name="SequencePuzzleStep1" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
script = ExtResource("16_in2xq")
sequence = [NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green"), NodePath("../../Objects/Blue")]
hint_sign = NodePath("../../Signs/HintSign1")

[node name="SequencePuzzleStep2" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
script = ExtResource("16_in2xq")
sequence = [NodePath("../../Objects/Blue"), NodePath("../../Objects/Green"), NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green")]
hint_sign = NodePath("../../Signs/HintSign2")

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("17_3rrd2")]
position = Vector2(861, 282)
revealed = false
next_scene = "uid://dnk7fcc6cqjx8"
item = SubResource("Resource_n8tm3")
collected_dialogue = ExtResource("19_6gaxm")
dialogue_title = &"well_done"

[node name="Sign" parent="OnTheGround" instance=ExtResource("20_vttva")]
position = Vector2(153, 567)
direction = 1
text = "First melody: yellow, green, blue."

[node name="Boxes" type="Node2D" parent="OnTheGround"]
position = Vector2(-37, 0)

[node name="Box1" type="RigidBody2D" parent="OnTheGround/Boxes"]
position = Vector2(239, 259)
mass = 2.0
gravity_scale = 0.0
lock_rotation = true
freeze = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 8.0
script = ExtResource("21_x6l02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/Boxes/Box1"]
position = Vector2(-40, 86)
shape = SubResource("RectangleShape2D_x6l02")

[node name="Box1_sprite" type="Sprite2D" parent="OnTheGround/Boxes/Box1"]
position = Vector2(-40, 86)
texture = ExtResource("21_gg1sl")

[node name="Box2" type="RigidBody2D" parent="OnTheGround/Boxes"]
position = Vector2(649, 267)
mass = 2.0
gravity_scale = 0.0
lock_rotation = true
freeze = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 8.0
script = ExtResource("23_k8ms1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/Boxes/Box2"]
position = Vector2(58, 84)
shape = SubResource("RectangleShape2D_x6l02")

[node name="Box2_sprite" type="Sprite2D" parent="OnTheGround/Boxes/Box2"]
position = Vector2(58, 83)
texture = ExtResource("24_cf23d")

[node name="PuzzleSumas" type="Node2D" parent="OnTheGround"]
position = Vector2(-30, 0)

[node name="Puentes" type="Node2D" parent="OnTheGround/PuzzleSumas"]
position = Vector2(853, 233)

[node name="PuzzleSuma1" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes"]
position = Vector2(10, 71)

[node name="Puente1_PS1" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes/PuzzleSuma1"]

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Puentes/PuzzleSuma1/Puente1_PS1"]
position = Vector2(7, 183)
texture = ExtResource("25_1devu")

[node name="Puente2_PS1" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes/PuzzleSuma1"]

[node name="Sprite2D" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Puentes/PuzzleSuma1/Puente2_PS1"]
position = Vector2(55, 183)
texture = ExtResource("26_vto3y")

[node name="PuzzleSuma2" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes"]

[node name="PuzzleSuma3" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes"]

[node name="PuzzleSuma4" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes"]

[node name="PuzzleSuma5" type="Node2D" parent="OnTheGround/PuzzleSumas/Puentes"]

[node name="Numeros" type="Node2D" parent="OnTheGround/PuzzleSumas"]

[node name="Number1" type="RigidBody2D" parent="OnTheGround/PuzzleSumas/Numeros"]
position = Vector2(263, 197)
gravity_scale = 0.0
script = ExtResource("27_number1")

[node name="ColllsionNumber1" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number1"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_0krk3")

[node name="SpriteNumber1" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Numeros/Number1/ColllsionNumber1"]
position = Vector2(-1.2397766e-05, -2)
scale = Vector2(0.7378472, 0.7395833)
texture = ExtResource("26_qbn36")

[node name="InteractArea" type="Area2D" parent="OnTheGround/PuzzleSumas/Numeros/Number1"]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 0
script = ExtResource("26_interact")
interact_label_position = Vector2(85, -20)
action = "Tap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number1/InteractArea"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_interact")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="Number2" type="RigidBody2D" parent="OnTheGround/PuzzleSumas/Numeros"]
position = Vector2(363, 197)
gravity_scale = 0.0
script = ExtResource("28_d1r8i")

[node name="ColllsionNumber2" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number2"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_0krk3")

[node name="SpriteNumber2" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Numeros/Number2/ColllsionNumber2"]
position = Vector2(-1.2397766e-05, -2)
scale = Vector2(0.7378472, 0.7395833)
texture = ExtResource("29_8k25n")

[node name="InteractArea" type="Area2D" parent="OnTheGround/PuzzleSumas/Numeros/Number2"]
collision_layer = 32
collision_mask = 0
script = ExtResource("26_interact")
interact_label_position = Vector2(85, -20)
action = "Tap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number2/InteractArea"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_interact")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="Number3" type="RigidBody2D" parent="OnTheGround/PuzzleSumas/Numeros"]
position = Vector2(268, 299)
gravity_scale = 0.0
script = ExtResource("29_p0ape")

[node name="ColllsionNumber3" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number3"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_0krk3")

[node name="SpriteNumber3" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Numeros/Number3/ColllsionNumber3"]
position = Vector2(-1.2397766e-05, -2)
scale = Vector2(0.7378472, 0.7395833)
texture = ExtResource("31_1devu")

[node name="InteractArea" type="Area2D" parent="OnTheGround/PuzzleSumas/Numeros/Number3"]
collision_layer = 32
collision_mask = 0
script = ExtResource("26_interact")
interact_label_position = Vector2(85, -20)
action = "Tap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number3/InteractArea"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_interact")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="Number4" type="RigidBody2D" parent="OnTheGround/PuzzleSumas/Numeros"]
position = Vector2(365, 297)
gravity_scale = 0.0
script = ExtResource("30_kmrtp")

[node name="ColllsionNumber4" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number4"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_0krk3")

[node name="SpriteNumber4" type="Sprite2D" parent="OnTheGround/PuzzleSumas/Numeros/Number4/ColllsionNumber4"]
position = Vector2(-1.2397766e-05, -2)
scale = Vector2(0.7378472, 0.7395833)
texture = ExtResource("33_vto3y")

[node name="InteractArea" type="Area2D" parent="OnTheGround/PuzzleSumas/Numeros/Number4"]
collision_layer = 32
collision_mask = 0
script = ExtResource("26_interact")
interact_label_position = Vector2(85, -20)
action = "Tap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/PuzzleSumas/Numeros/Number4/InteractArea"]
position = Vector2(86, 55)
shape = SubResource("CircleShape2D_interact")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("21_ca12e")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(1.333, 1.333)
position_smoothing_enabled = true

[node name="Cinematic" type="Node2D" parent="."]
script = ExtResource("22_tgado")
dialogue = ExtResource("19_6gaxm")
metadata/_custom_type_script = "uid://x1mxt6bmei2o"

[connection signal="solved" from="OnTheGround/SequencePuzzle" to="OnTheGround/CollectibleItem" method="reveal"]
